# EdenPlatform

./: .gitmodules  Cargo.toml  DIARY.md  LICENSE.md  Makefile  README.md  build.rs  nix-pkgs-lock.nix  shell.nix
edb-src/: application.edl  blackbox.edl  clickhouse.edl  docker.edl  docker_images.edl  lib.lua  logging.edl  loki.json  main.edl  meta.edl  minio.edl  monitoring.edl  networking.edl  nixpkgs.edl  persistence.edl  postgres.edl  queue.edl  server_core.edl  system_data.edl  telegram.edl  test_data.edl  tracing.edl  versioned_types.edl  zfs.edl
edb-src/cloud_specific/: aws.edl  aws_disks.edl  gcloud.edl  gcloud_disks.edl
misc/: bad-metrics-db.yml  create-amis.sh  good-metrics-db.yml
misc/l1-sig-checker/: default.nix  dune-project
misc/patroni-build/: Dockerfile  build
src/: cli.rs  database.rs  lib.rs  prom_metrics_dump.rs
src/codegen/: infra.rs  integration_tests.rs  makefile.rs  mod.rs  nixplan.rs  preconditions.rs  secrets.rs
src/codegen/l1_provisioning/: cadvisor.rs  consul.rs  disks.rs  dns.rs  fast_l1.rs  hardware.rs  log_forwarding.rs  mod.rs  node_exporter.rs  nomad.rs  routing.rs  sigchecker.b64  tls_certs.rs  utils.rs  vault.rs  wireguard.rs
src/codegen/rust/: backend.rs  frontend.rs  mod.rs
src/codegen/terraform/: aws.rs  gcloud.rs  mod.rs
src/static_analysis/: alerts.rs  applications.rs  docker_images.rs  errors.rs  http_endpoints.rs  mod.rs  projections.rs  server_disks.rs  server_labels.rs
src/static_analysis/bw_compat_types/: mod.rs  parser.rs
src/static_analysis/databases/: clickhouse.rs  mod.rs  postgres.rs  queries.rs
src/static_analysis/dc_impl/: aws-instance-types.json  aws.rs  bm_simple.rs  gcloud-instance-types.txt  gcloud.rs  mod.rs
src/static_analysis/dns/: analysis.rs  integration_tests.rs  mod.rs
src/static_analysis/l2_provisioning/: blackbox_deployments.rs  build_epl_apps.rs  clickhouse.rs  consul_resources.rs  docker_registry.rs  epl_app_ingress.rs  epl_jobs.rs  external_lb.rs  grafana.rs  grafana_loki.rs  grafana_tempo.rs  minio.rs  mod.rs  monitoring.rs  nats.rs  postgres.rs  schedule_nomad_jobs.rs  system.rs  vault_secrets.rs
src/static_analysis/networking/: coprocessor_dc.rs  mod.rs
src/static_analysis/server_runtime/: mod.rs
src/tests/: alerts.rs  blackbox_deployments.rs  bw_compat_types.rs  common.rs  dns.rs  docker_images.rs  frontend.rs  general.rs  http_endpoints.rs  memory.rs  minio.rs  mod.rs  placements.rs  regionality.rs  regressions.rs  server_disks.rs
src/tests/applications/: buckets.rs  ch_wiring.rs  config.rs  general.rs  mod.rs  pg_wiring.rs  streams.rs
src/tests/blackbox_deployments/: env_variables.rs  ingress.rs  main.rs  mod.rs
src/tests/clickhouse/: keeper.rs  mod.rs  mutators.rs  nats_integration.rs  queries.rs  server.rs
src/tests/dc_impl/: aws.rs  bm_simple.rs  gcloud.rs  hetzner.rs  mod.rs
src/tests/dns/: core.rs  misc_records.rs  mod.rs
src/tests/networking/: coprocessor_dc.rs  general.rs  mod.rs
src/tests/postgres/: mod.rs  mutator_dataset.rs
test-envs/: clone-env  compile  compile-all-envs
test-envs/docker-cache/: config.yml
test-envs/envs/aws-multi-dc/: Makefile  secrets-checksums.yml  secrets.yml
test-envs/envs/aws-single-dc/: Makefile  secrets-checksums.yml  secrets.yml
test-envs/envs/aws-single-dc-multisub/: Makefile  admin-wg.conf  secrets-checksums.yml  secrets.yml
test-envs/envs/gcloud-aws-multi-dc/: Makefile
test-envs/envs/gcloud-multi-dc/: Makefile  admin-wg.conf  secrets-checksums.yml  secrets.yml
test-envs/envs/gcloud-single-dc/: Makefile  admin-wg.conf  secrets-checksums.yml  secrets.yml
test-envs/envs/gcloud-single-dc-multisub/: Makefile  admin-wg.conf  secrets-checksums.yml  secrets.yml
test-envs/envs/multi-dc-lite/: Makefile  secrets-checksums.yml  secrets.yml
test-envs/envs/multi-dc-region/: Makefile  secrets-checksums.yml  (+1 more)
test-envs/envs/single-dc-coproc/apps/hello-world/: Cargo.toml  result
test-envs/envs/single-dc-coproc/apps/hello-world/src/: generated.rs  implementation.rs
test-envs/envs/single-dc-coproc/comp-envs/default_frontend/: Cargo.toml
test-envs/envs/single-dc-disk-serial/integration-tests/: Cargo.toml
test-envs/envs/single-dc-disk-serial/integration-tests/src/: common.rs  generated.rs
wiki/: contributors-guide.md  contributors-guide.org  development.md  development.org  dns.md  dns.org  networking.md  networking.org  philosophy.md  philosophy.org  placements.md  placements.org  productivity.md  productivity.org  roadmap.md  roadmap.org
(+498 files in other folders)
