[package]
name = "eden_platform"
version = "0.1.0"
edition = "2021"

[lib]
name = "epl"
path = "src/lib.rs"

[[bin]]
name = "epl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
lz4_flex = { version = "0.9.3", default-features = false, features = ["checked-decode"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.11"
serde_json = "1.0.89"
lazy_static = "1.4.0"
edendb = { path = "third-party/EdenDB" }
iprange = "0.6.7"
ipnet = "2.5.0"
tokio-postgres = "0.7.7"
tokio = { version = "1.20.1", features = ["full"] }
async-process = { version = "1.5.0" }
futures = "0.3.24"
urlencoding = "2.1.2"
prettydiff = "0.6.1"
prettytable-rs = "0.9.0"
pretty_assertions = "1.3.0"
nom = "7.1.1"
nom_locate = "4.2.0"
rand = "0.8.5"
regex = "1.6.0"
clap = { version = "3.2.15", features = ["derive"] }
sorted-vec = "0.8.0"
convert_case = "0.5.0"
eui48 = "1.1.0"
base64 = "0.13.1"
uuid = { version = "1.2.2", features = ["v4"] }
hmac-sha256 = "1.1.7"
tempfile = "3.3.0"
strum = "0.24.1"
strum_macros = "0.24.1"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls"] }
html-escape = "0.2.13"
hex = "0.4.3"
passivized_htpasswd = "0.0.3"
colored = "1.9.4"
zstd = "0.13.1"
x509-parser = "0.12.0"
sodiumoxide = "0.2.7"
chrono = "0.4.38"
rusqlite = { path = "third-party/EdenDB/third-party/rusqlite" }
clickhouse = { version = "0.11.6", default-features = false, features = ["lz4"] }
num256 = "0.5.2"

[dev-dependencies]
temp-env = "0.3"
