
[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-webpki-roots"] }
rsdns = { version = "0.15.0", features = ["net-tokio"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
urlencoding = "2.1.2"
headless_chrome = "1.0.5"
regex = "1.8.4"
futures = "0.3.30"
base64 = "0.21.7"
hex = "0.4.3"
