[package]
name = "epl-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.58"
prometheus = "0.13.3"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
json_env_logger2 = { version = "0.2.1", features = ["iso-timestamps"] }
kv-log-macro = "1.0.7"
lazy_static = "1.4.0"
serde = "1.0.145"
serde_json = "1.0.87"
bincode = "1.3.3"
tokio-postgres = "0.7.7"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
async-nats = "0.34.0"
bytes = "1.2.1"
actix-web = "4.2.1"
qstring = "0.7.2"
derive_more = "0.99.17"
maud = "0.24.0"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.14.0"
rand = "0.8.5"
rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
