[package]
name = "epl-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo = "0.8.1"
gloo-net = "0.3.0"
web-sys = "0.3.61"
js-sys = "0.3.61"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
bincode = "1.3.3"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "=0.2.90"
urlencoding = "2.1.2"
num256 = "0.5.2"
